--- a/index.css
+++ b/index.css
@@ -10,13 +10,14 @@ body {
     margin-bottom: 15px;
 }
 .item {
-    display: flex;
-    
+    display: flex;   
+}
+.hide {
+    display: none;
 }
 .slider .item img {
 object-fit: cover;
     width: 50%;
-    height: 100%;
     border: none;
     box-shadow: none;
 }
